Prawie gotowa strona produktu - 16.10

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,10 @@
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
+	font-size: 1.2rem;
 	box-align: center;
 	scroll-behavior: smooth;
+	text-align: center;	
 }
 
 
