--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -4,6 +4,8 @@
 	display: flex;
 	flex-direction: column;
 	width: 100%;
+	border-bottom: 1px solid black;
+
 
 	.abovepart {
 		display: flex;
@@ -11,7 +13,7 @@
 		position: relative;
 		align-items: center;
 		width: 100%;
-		border: 1px solid black;
+		
 
 		.logo {
 			img {
@@ -60,6 +62,7 @@
 		width: 100%;
 		height: 100%;
 		padding: 20px 0px;
+		
 	
 
 		.belowfirstpart {
@@ -82,6 +85,7 @@
 
 	.active {
 		display: flex;
+		
 	}
 }
 
