Przed wymian fotek

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,8 @@
+@import './styles/colors.scss';
+
+
 * {
+	position: relative;
 	font-family: 'Rajdhani', sans-serif;
 	box-sizing: border-box;
 	margin: 0;
