--- a/src/styles/maincontent.scss
+++ b/src/styles/maincontent.scss
@@ -1,3 +1,4 @@
+@import './colors';
 .about {
 	display: flex;
 	flex-direction: column;
@@ -22,7 +23,7 @@
 	.etsy {
 		display: flex;
 		flex-direction: column;
-		background-color: black;
+		background-color: $black-color;
 		align-items: center;
 		width: 25%;
 		padding: 20px;
@@ -32,7 +33,7 @@
 		.description {
 			display: flex;
 			justify-content: center;
-			color: white;
+			color: $white-color;
 		}
 
 		.evaluation {
@@ -47,7 +48,7 @@
 
 		.stars {
 			font-size: 1.2rem;
-			color: white;
+			color: $white-color;
 		}
 	}
 }
@@ -83,6 +84,8 @@
 			margin: 20px;
             cursor: pointer;
             transition: .3s;
+			border: none;
+		
 
 			img {
 				width: 100%;
@@ -92,17 +95,18 @@
 				display: flex;
 				flex-direction: column;
 				position: absolute;
-				bottom: -20%;
+				bottom: -30%;
                 transition: .3s;
 				h3 {
 					font-size: 1.4rem;
+					text-shadow: 1px 1px 1px $white-color;
 				}
 			}
             
 		}
 
         .item:hover {
-            border: 1px solid black;
+            border: 1px solid $black-color;
 
             .itemtitle {
 				
