--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,10 +1,10 @@
 
-
+@import './colors';
 .navigation {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	border-bottom: 1px solid black;
+	border-bottom: 1px solid $black-color;
 
 
 	.abovepart {
@@ -20,6 +20,7 @@
 				margin-top: 10px;
 				width: 100px;
 				height: 100px;
+				cursor: pointer;
 			}
 		}
 
@@ -34,9 +35,9 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			border: 1px solid black;
+			border: 1px solid $black-color;
 			border-radius: 50%;
-			background-color: #fff;
+			background-color: $white-color;
 			cursor: pointer;
 			font-size: 1.2rem;
 			width: 50px;
@@ -46,11 +47,11 @@
 		}
 
 		.icon:hover {
-			background-color: rgb(0, 0, 0);
-			color: white;
+			background-color: $black-color;
+			color: $white-color;
 		}
 		.icon:active {
-			background-color: burlywood;
+			background-color: $gray-color;
 		}
 	}
 
@@ -74,10 +75,10 @@
 				padding: 10px;
 				a {
 					text-decoration: none;
-					color: black;
+					color: $black-color;
 				}
 				a:hover {
-					color: gray;
+					color: $gray-color;
 				}
 			}
 		}
