--- a/src/styles/productheader.scss
+++ b/src/styles/productheader.scss
@@ -1,6 +1,7 @@
 
-
+@import './colors';
 	.productcontainer {
+		position: relative;
 		display: flex;
 		flex-direction: column;
 		margin-top: 20px;
@@ -22,7 +23,7 @@
 			h4 {
 				margin: 10px 0px;
 				text-align: left;
-				border-bottom: 1px solid black;
+				border-bottom: 1px solid $black-color;
 			}
 
 			p {
@@ -89,11 +90,11 @@
 					right: 0;
 					bottom: 0;
 					height: 0;
-					background-color: rgba(218, 218, 218, 0.5);
+					background-color: $gray-color-80transp;
 				}
 
 				button:hover {
-					border: 1px solid rgb(65, 65, 65);
+					border: 1px solid $gray-color;
 				}
 
 				button:active::before {
