--- a/src/styles/sales-buttons.scss
+++ b/src/styles/sales-buttons.scss
@@ -1,3 +1,4 @@
+@import './colors';
 .SalesButtons {
 	display: flex;
 	margin: 20px 0px 20px 0px;
@@ -6,9 +7,9 @@
 	.ask {
 		padding: 5px 10px;
 		width: 45%;
-		border: 3px solid black;
-		background-color: black;
-		color: white;
+		border: 3px solid $black-color;
+		background-color: $black-color;
+		color: $white-color;
 		border-radius: 5px;
 		font-size: 1rem;
 		max-width: 200px;
@@ -18,18 +19,18 @@
 		padding: 5px 10px;
 		width: 45%;
 		max-width: 200px;
-		border: 1px solid black;
-		background-color: white;
-		color: black;
+		border: 1px solid $black-color;
+		background-color: $white-color;
+		color: $black-color;
 		border-radius: 5px;
 		font-size: 1rem;
 		cursor: pointer;
 	}
 
 	.buy:hover {
-		border: 1px solid orangered;
-		background-color: orangered;
-		color: white;
+		border: 1px solid $orange-color;
+		background-color: $orange-color;
+		color: $white-color;
 	}
 }
 
