--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -9,6 +9,10 @@
 	height: auto;
 	background-color: $black-color;
 	color: $white-color;
+	
+	.titleProducts{
+		padding: 20px 0px;
+	}
 
 	.seoDesc {
 		display: flex;
