--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -68,7 +68,8 @@
 
 		.belowfirstpart {
 			display: flex;
-			text-align: center;
+			align-items: center;
+		justify-content: center;
 			margin: 0px 40px;
 			li {
 				list-style-type: none;
@@ -86,7 +87,8 @@
 
 	.active {
 		display: flex;
-		
+		align-items: center;
+		justify-content: center;
 	}
 }
 
