--- a/src/styles/maincontent.scss
+++ b/src/styles/maincontent.scss
@@ -25,7 +25,7 @@
 		flex-direction: column;
 		background-color: $black-color;
 		align-items: center;
-		width: 25%;
+		width: 100%;
 		padding: 20px;
 		margin-top: 20px;
 
@@ -120,3 +120,11 @@
 		
 	}
 }
+
+@media (min-width: 992px) {
+
+	.about {
+		.etsy{width: 30%;}
+	}
+}
+
